--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <form 
         action=https://formspree.io/f/mnnqqkdp method="POST" id="formulario"> 
-        <h2>Formulario de descargar Digi</h2>
+        <h2>Formulario de descarga Digi</h2>
         <input type="text" name="Nombre"  placeholder="Nombre Notario"><br>
         <input type="text" name="Notaria" placeholder="Nombre Notaría"><br>
         <label for="departamento">Seleccione el departamento:</label><br>
