cambiando los label

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2>Formulario de descarga Digi</h2>
         <input type="text" name="Nombre"  placeholder="Nombre Completo del Notario(a)"><br>
         <input type="text" name="Notaria" placeholder="Nombre Notaría"><br>
-        <label for="departamento">Seleccione el departamento:</label><br>
+        <label for="departamento">Departamento:</label><br>
         <select id="departamento" name="Departamento" onchange="actualizarMunicipios()">
             <option value="">--Seleccione un departamento--</option>
             <option value="Amazonas">Amazonas</option>
@@ -77,7 +77,7 @@
             <option value="Vichada">Vichada</option>
 
         </select><br>
-            <label for="departamento">Seleccione la ciudad o municipio:</label><br>
+            <label for="departamento">Ciudad o municipio:</label><br>
             <select id="municipio" name="Municipio">
             <option value="">--Seleccione un municipio--</option>
         </select><br>
