cambiando un placeholder

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <form 
         action=https://formspree.io/f/mnnqqkdp method="POST" id="formulario"> 
         <h2>Formulario de descarga Digi</h2>
-        <input type="text" name="Nombre"  placeholder="Nombre Completo del Notario(a)"><br>
+        <input type="text" name="Nombre"  placeholder="Nombre Notario(a)"><br>
         <input type="text" name="Notaria" placeholder="Nombre Notaría"><br>
         <label for="departamento">Departamento:</label><br>
         <select id="departamento" name="Departamento" onchange="actualizarMunicipios()">
