cambiando los seleccionadores

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <input type="text" name="Notaria" placeholder="Nombre Notaría"><br>
         <label for="departamento">Departamento:</label><br>
         <select id="departamento" name="Departamento" onchange="actualizarMunicipios()">
-            <option value="">--Seleccione un departamento--</option>
+            <option value="">--o--</option>
             <option value="Amazonas">Amazonas</option>
             <option value="Antioquia">Antioquia</option>
             <option value="Atlántico">Atlántico</option>
@@ -79,7 +79,7 @@
         </select><br>
             <label for="departamento">Ciudad o municipio:</label><br>
             <select id="municipio" name="Municipio">
-            <option value="">--Seleccione un municipio--</option>
+            <option value="">--o--</option>
         </select><br>
         <input type="email" name="email"  placeholder=" Correo electrónico"><br>
         <input type="phone" name="Telefono"  placeholder="Número Celular"><br>
