cambio nombre notaria

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         action=https://formspree.io/f/mnnqqkdp method="POST" id="formulario"> 
         <h2>Formulario de descarga Digi</h2>
         <input type="text" name="Nombre"  placeholder="Nombre Notario(a)"><br>
-        <input type="text" name="Notaria" placeholder="Nombre Notaría"><br>
+        <input type="text" name="Notaria" placeholder="Nombre de la Notaría"><br>
         <label for="departamento">Departamento:</label><br>
         <select id="departamento" name="Departamento" onchange="actualizarMunicipios()">
             <option value=""></option>
